# Air.rs

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  air_rs_speculative_decoding_protocol.md  build.rs  build_air.ps1  build_air.sh  pyproject.toml  run_tests.ps1  setup_env.ps1  strix_gap_analysis.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  rocm.yml
benches/: orchestration.rs  throughput.rs
charts/air-rs/: Chart.yaml  values.yaml
charts/air-rs/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  service.yaml
docs/adr/: 0001-transformer-block-trait-seam.md  0002-inject-device-into-inference-generator.md  0003-dispatcher-trait-seam.md  0004-session-kv-cache-trait-seam.md  0005-ucal-split-shared-buffer-metal-compute.md  0006-ghost-drafter-trait-speculative-corrections.md
examples/: list_tensors.rs  produce_benchmarks.rs  v110_benchmark.rs  verify_gbnf_speculative.rs
python/air_rs/: __init__.py  _air_rs.pyi  _types.pyi  utils.py
python/tests/: conftest.py  test_bindings.py
scratch/: check_cuda.rs  list_tensors.rs  simulator_100tps.rs  test_key.pem  test_key.pub.pem  test_pipeline_e2e.rs
scripts/: build_wheel.sh  cc  eval_gate.sh  nvcc  regression_gate.sh  run_benchmarks.sh  setup_env.sh  test_all.sh  tiered_ttft.sh  validate_correctness.py
src/: alt_quant.rs  api.rs  aqlm.rs  arb.rs  attention_backend.rs  audit_log.rs  batch_optimizer.rs  blocks.rs  chat_template.rs  chunked_attn.rs  content_safety.rs  continuous_batch.rs  cuda_pipeline.rs  device_map.rs  dispatcher.rs  distributed.rs  drive_inquisitor.rs  dual_rope.rs  eagle2.rs  eval.rs  execution_policy.rs  fft.rs  flash_decode.rs  fp8.rs  gated_deltanet.rs  gbnf.rs  gemma4.rs  generator.rs  ghost_drafter.rs  ghost_drafting.rs  gpu_pipeline.rs  hqq.rs  inference_step.rs  iq_quant.rs  iso_quant.rs  json_grammar.rs  kv_cache.rs  kv_compress.rs  kv_tier.rs  layer_pipeline.rs  (+62 more)
src/batching/: arb.rs  kernel.rs  mod.rs
src/strix/: arena.rs  async_io.rs  backend_detect.rs  benchmarks.rs  bridge.rs  chaos_tests.rs  cold_boot.rs  compat.rs  config.rs  cpu_hal.rs  cuda_hal.rs  cufile_ffi.rs  e2e_validation.rs  execution_cursor.rs  gpu_alloc.rs  gpu_direct.rs  gpu_tensor_view.rs  hal.rs  integration_tests.rs  io_engine.rs  kernels.metal  meta.rs  metal_hal.rs  mmap_storage.rs  mod.rs  multi_gpu.rs  onnx.rs  pytorch.rs  ram_pool.rs  registry.rs  rocm_hal.rs  safetensors.rs  scheduler.rs  scheduler_thread.rs  score.rs  security.rs  session.rs  std_storage_hal.rs  streamer_adapter.rs  types.rs  (+2 more)
tests/: arch_verification.rs  gbnf_tree_mask.rs  integration_test.rs  oidc_integration.rs  quant_identity.rs  warp_identity.rs  warp_validation.rs
