[package]
name = "air-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sunay Hegde"]
description = "A high-performance, memory-fluid LLM inference engine."

[dependencies]
# Standard Async & Memory
tokio = { version = "1.37", features = ["full", "tracing"] }
memmap2 = "0.9"
anyhow = "1.0"
libc = "0.2"

# ML & CUDA
# candle-core is always included for tensor operations (CPU fallback).
# The "cuda" feature enables GPU acceleration via candle-core's cuda feature.
candle-core = "0.8.0"
candle-flash-attn = { version = "0.8.0", optional = true }
half = { version = "2.4", features = ["num-traits"] }
safetensors = "0.5.2"

# API & Utilities
axum = { version = "0.7", features = ["default"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
byteorder = "1.5"
dashmap = "6.1"
rayon = "1.10"
rand = "0.8"
indicatif = "0.17"

# Model Hub & Utilities
dirs = "5.0"
ureq = { version = "2.10", default-features = false, features = ["native-tls", "gzip"] }
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
cuda = ["candle-core/cuda"]
vulkan = []
metal = ["candle-core/metal"]
flash-attn = ["candle-flash-attn"]
python = ["pyo3"]

[dependencies.pyo3]
version = "0.21"
optional = true
features = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3